<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Oxyjon</string>
    <string name="partnerKey">NDFSne31e8da513e24e2dba586e113ae1a6f3</string>
    <string name="facebook_app_id">477487313815260</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">7b2473e3af3e16724cd1f4d3818a4571</string>
    <string name="razorPayKey">rzp_live_MMreqachMTmLFQ</string>
    <string name="please_enter_your_username_and_password_to_login">Please enter your mobile number to login</string>
    <string name="username">Username</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm password</string>
    <string name="by_signing_up_you_are_agree_to_our_terms_conditions_and_privacy_policy">By signing up you agree to Terms and Conditions and Privacy Policy</string>
    <string name="loading">Loading</string>
    <string name="check_connection">Please check your internet conneciiton.</string>
    <string name="please_check_your_email_and_verify_email">Please check your email and verify email.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="michael_smirth">Michael Smirth</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_health">My Health</string>
    <string name="my_services">Health Checkups</string>
    <string name="membership_plans">Buy Diabetes Plan</string>
    <string name="emergency">Emergency</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="weight_report">Weight report</string>
    <string name="weight_in_kgs">(weight in KGs)</string>
    <string name="feb_12_2019">Feb,12,2019</string>
    <string name="health_parameter_charts">Health Parameter Charts</string>
    <string name="continue_btn">Continue</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="when_were_you_born">When were you born?</string>
    <string-array name="blood_group">
        <item>Blood Group</item>
        <item>O+</item>
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O-</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
    </string-array>
    <string name="address">Address</string>
    <string name="residing_in">Residing In</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="medical_insurance_number">Medical Insurance Number</string>
    <string-array name="dd">
        <item>DD</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="mm">
        <item>MM</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="yyyy">YYYY</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="email_id">Email ID</string>
    <string name="support">Support</string>
    <string name="share_app">Share app</string>
    <string name="privacy_policy">Privacy and Policy</string>
    <string name="email_address">Email Address</string>
    <string name="a_new_password_has_been_sent_on_your_email_address">A new password has been sent to your e-mail address.</string>
    <string name="please_enter_your_e_mail_address_we_will_send_you_a_new_password"><![CDATA[Please enter your e-mail address & we will send you a new password.]]></string>
    <string name="amoxicillin">Amoxicillin</string>
    <string name="asprin">Asprin</string>
    <string name="diclofenac">Diclofenac</string>
    <string name="allergy">Allergy</string>
    <string name="add_more">   Add  </string>
    <string name="add">Add More</string>
    <string name="remove">Remove</string>
    <string name="pancreatic_cancer">Health Conditions</string>
    <string name="pain_in_the_abdomen_or_middle_back">Pain in the abdomen or middle back</string>
    <string name="fluid_in_the_abdomen_or_lump_in_the_abdomen">Fluid in the abdomen or lump in the abdomen</string>
    <string name="nausea_or_vomiting">Nausea or vomiting</string>
    <string name="blood_in_stool_or_pale_color">Blood in stool or pale color</string>
    <string-array name="severity">
        <item>Severity</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="_11_02_2019">11.02.2019</string>
    <string name="time">Time</string>
    <string name="pm">PM</string>
    <string name="weight_loss">Weight loss</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="malaise">Malaise</string>
    <string name="elevated_blood_sugars">Elevated blood sugars</string>
    <string name="jaundice">Jaundice</string>
    <string name="escalation_of_symptom_least_severe_5_most_severe_1">Escalation of Symptom \n (Least severe, 5: Most severe :1)</string>
    <string name="systolic_top_number_diastolic_bottom_number_in_mm_hg">(Systolic: Top number, Diastolic: Bottom number in \'mm HG\')</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="enter_systolic">Ente]r Systolic</string>
    <string name="enter_diastolic">Enter Diastolic</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="date_07_02_2019">Date : 07.02.2019</string>
    <string name="time_3_06_am">Time: 3:06 AM</string>
    <string name="systolic_469282">Systolic: 469282</string>
    <string name="diastolic_469282">Diastolic: 469282</string>
    <string name="am">AM</string>
    <string name="in_mg_dl">(in mg/dL)</string>
    <string name="enter_pulse_rate">Enter Pulse Rate</string>
    <string name="enter_lavel">Enter Level</string>
    <string name="enter_hdl">Enter HDL</string>
    <string name="enter_ldl">LDL</string>
    <string name="enter_vldl">VLDL</string>
    <string name="enter_triglycerides">Triglycerides</string>
    <string name="in_ng_ml">( In ng/ml )</string>
    <string name="date">Date</string>
    <string name="in">( in % )</string>
    <string name="in_miu_ml">( in mIU/ml )</string>
    <string name="non_medical_intervention">Non-Medical Intervention</string>
    <string name="treatment">Treatment</string>
    <string name="enter_medicine">Search Medicine</string>
    <string name="procedure">Procedure</string>
    <string name="procedure_date">Procedure Date</string>
    <string name="enter_procedure_cost">Enter Procedure Cost</string>
    <string name="treatment_provider">Treatment Provider</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="upload_your_medical_prescriptions_test_reports">Upload Your Medical prescription/ Test reports</string>
    <string name="note_only_images_png_jpg_gif_and_pdf_are_allowed_of_size_less_than_2mb">Note: Only Image(PNG, JPG, GIF) and PDF files of size less than 2MB are allowed.</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="pick_image_from">Pick Image From</string>
    <string name="upload_documents_from">Upload Documents From</string>
    <string name="pdf">PDF</string>
    <string name="lorem_ipsum_dolor_sit_amet_appareat_hendreit_per_id_ius_errem_iudico">Lorem ipsum dolor sit amet, appareat hendreit per id, ius errem iudico</string>
    <string name="create_health_profile_for_yourselft_or_a_family_member">Create health profile for yourself or a family member</string>
    <string name="access_your_profile_anywhere_anytime_on_any_device">Access your profile anywhere, anytime on any device</string>
    <string name="maintain_history_of_health_conditions">Maintain history of health conditions</string>
    <string name="keep_track_of_your_symptoms_and_health_parameters">Keep track of your symptoms and health parameters</string>
    <string name="upload_your_prescriptions_and_lab_test_reports_5_mb_free">Upload your prescriptions and lab test reports (50 MB Free)</string>
    <string name="choose_this_plan">Choose this Plan</string>
    <string name="remotely_share_your_bp_pulse_and_sugar_levels_with_your_doctor">Remotely share your BP, Pulse, and Sugar levels with your doctor</string>
    <string name="solicit_doctor_recommendation_and_blood_donation_through_sms">Solicit doctor recommendation and blood donation through SMS</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="_250">250</string>
    <string name="per_month">per month</string>
    <string name="_1500">1500</string>
    <string name="_50_mo">50/Mo</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="upload_your_prescriptions_and_lab_test_reports_100_mb">Upload your prescriptions and lab test reports (upto 200 MB)</string>
    <string name="hdl">HDL:</string>
    <string name="ldl">LDL:</string>
    <string name="vldl">VLDL:</string>
    <string name="done">Done</string>
    <string name="triglycerides">Triglycerides:</string>
    <string name="file_name">File Name</string>
    <string-array name="document_type">
        <item>Document type</item>
        <item>Medical prescription</item>
        <item>Lab test report</item>
    </string-array>
    <string name="my_health_record">My Health Record</string>
    <string name="quick_update">Quick Update</string>
    <string name="family_health">Family Health</string>
    <string name="family_history_is_an_important_indicator_of_potential_health_risks_maintaining_your_family_history_can_help_in_proactive_interventions_to_reduce_health_issues">Family history is an important indicator of potential health risks. Maintaining your family history can help in proactive interventions to reduce health issues.</string>
    <string name="relationship_with_james">Relationship with James</string>
    <string name="glucose_fasting_and_post_meal">Glucose, Fasting and Post Meal</string>
    <string name="blood_sugar_fasting"><u>Blood Sugar Fasting</u></string>
    <string name="urine_routine">Urine Routine</string>
    <string name="enter_totalCholesterol">Total Cholesterol</string>
</resources>