<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/sp20"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/sp20"
                android:gravity="center"
                android:text="@string/upload_documents_from"
                android:textColor="@color/line_color"
                android:textSize="@dimen/sp20" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginBottom="@dimen/dp5"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_cam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp10"
                    android:text="@string/camera"
                    android:textColor="@color/line_color"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:layout_marginBottom="@dimen/dp5"
                    android:background="@color/line_color" />

                <TextView
                    android:id="@+id/btn_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/dp10"
                    android:text="@string/gallery"
                    android:textColor="@color/line_color"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/tv_line_pdf"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:layout_marginBottom="@dimen/dp5"
                    android:background="@color/line_color" />

                <TextView
                    android:id="@+id/btn_file"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/dp10"
                    android:text="@string/pdf"
                    android:textColor="@color/line_color"
                    android:textSize="@dimen/sp20" />

                <TextView
                    android:id="@+id/tvFileView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/line_color" />

                <TextView
                    android:id="@+id/btn_close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp15"
                    android:text="@string/cancel"
                    android:textColor="@color/line_color"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>