<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="10"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:gravity="center"
            android:layout_weight="3"
            android:id="@+id/tvlabpackage"
            tools:text="@string/glucose_fasting_and_post_meal"
            android:textColor="@color/line_color"
            android:textSize="@dimen/sp13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView

            android:background="@color/dull_black"
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent" />
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:layout_weight="2.7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/rupee_black_small"
                android:layout_width="@dimen/dp15"
                android:layout_height="@dimen/dp15"/>
            <TextView
                tools:text="1500000"
                android:id="@+id/tvPrice"
                android:textColor="@color/line_color"
                android:textSize="@dimen/sp13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:background="@color/dull_black"
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent" />
        <TextView
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:gravity="center"
            android:layout_weight="2"
            android:id="@+id/uniqueTest"
            tools:text="@string/urine_routine"
            android:textColor="@color/line_color"
            android:textSize="@dimen/sp13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:background="@color/dull_black"
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent" />
        <TextView
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:gravity="center"
            android:id="@+id/tvCommon"
            android:layout_weight="2.3"
            tools:text="@string/blood_sugar_fasting"
            android:textColor="@color/line_color"
            android:textSize="@dimen/sp13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
